// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complete() should do if result is true. 1`] = `
Array [
  Object {
    "payload": Object {
      "employeeId": "employeeId",
      "endDate": "endDate",
      "errors": Map {
        "recordDate" => Array [
          "serverError1",
        ],
      },
      "startDate": "startDate",
    },
    "type": "TIMESHEET-PC-IMPORTER/DAILY_RECORDS/SET_SERVER_ERRORS",
  },
]
`;

exports[`error() should do. 1`] = `
Array [
  Object {
    "payload": Object {
      "errorCode": undefined,
      "isContinuable": true,
      "isFunctionCantUseError": false,
      "message": "APIエラー - Error Test",
      "problem": "Error Test",
      "stackTrace": "",
      "type": "APIエラー",
    },
    "type": "CATCH_API_ERROR",
  },
]
`;

exports[`finally() should do. 1`] = `
Array [
  Object {
    "type": "LOADING_END",
  },
]
`;

exports[`start() should do. 1`] = `
Array [
  Object {
    "type": "LOADING_START",
  },
]
`;
